themes/upbound/assets/scss/_color-modes.scss
:root {
  color-scheme: light dark;
  body{
    background: var(--body-background);
    color: var(--body-font-color);

  }

}

img {
  filter: none;
}



:root[color-theme="light"] {
  --logo-color: url('/img/logos/upbound-docs.svg');

  @import "code-theme-base";
  @import "color-mode-light";
  @include light-mode;

  @import "code-theme-light";
  @include code-theme-light;
  

  // Don't dim images in light mode
  // Safety catch to reset dark mode setting


  .logo-container img {
    /* Use the CSS variable as the background image */
    content: var(--logo-color);
}
}

:root[color-theme="dark"] {


  @import "code-theme-base";
  @import "color-mode-dark";
  @include dark-mode;

  @import "code-theme-dark";
  @include code-theme-dark;

  --logo-color: url('/img/logos/up-docs-white.svg');


    // Dim all images in dark mode


  
    // Set the default image background to white
    // Without this transparent images are hard to see
    .bd-content img {
      background-color: #fff;
    }
    // But don't set the background to white on the home page tiles
    .home-card img {
      background: none;
    }

    .logo-container img {
      /* Use the CSS variable as the background image */
      content: var(--logo-color);
  }
}

